<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tela3_chicorita"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.example.administrador.meuprimeiroquiz.Quiz3Activity"
    android:weightSum="1">

    <TextView
        android:id="@+id/tv_tq3_ask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_weight="0.31"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/ask3"
        android:textColor="@android:color/holo_green_light"
        android:textSize="22sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="75dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.01"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_tq3_respErrada1"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="#66b5ed31"
            android:text="@string/Gelo"
            android:textColor="@android:color/white"
            tools:ignore="NestedWeights" />

        <Button
            android:id="@+id/bt_tq3_respErrada2"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="#66b5ed31"
            android:text="@string/Elétrico"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.05" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.01"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_tq3_respCerta"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="#66b5ed31"
            android:text="@string/Pedra"
            android:textColor="@android:color/white"
            tools:ignore="NestedWeights" />

        <Button
            android:id="@+id/bt_tq3_respErrada3"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="#66b5ed31"
            android:text="@string/Inseto"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.42" />

    <ProgressBar
        android:id="@+id/progressbar_asks"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="-2dp"
        android:layout_weight="0.03"
        android:elevation="1dp"
        android:progress="0"
        android:progressBackgroundTint="?attr/colorControlHighlight"
        android:progressTint="?android:attr/colorControlNormal" />

</LinearLayout>
